--- a/mavdemo/pom.xml
+++ b/mavdemo/pom.xml
@@ -53,6 +53,12 @@
       <version>4.3.19.RELEASE</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-jdbc</artifactId>
+      <version>4.3.19.RELEASE</version>
+    </dependency>
+
   </dependencies>
 
   <build>
